Lego Editor Change Log

  *  Implemented Copy/Paste for Assertions, D / Q / V and Expressions 